welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:3: error: Missing closing brace `}' assumed here
       var fin = false;
       ^